[metadata]
name = lambre
version = 2.0.0
description = a tool to measure the grammatical well-formedness of multilingual texts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adithya7/lambre
author = Adithya Pratapa, Antonios Anastasopoulos, Shruti Rijhwani, Aditi Chaudhary, David R. Mortensen, Graham Neubig and Yulia Tsvetkov
project_urls =
    Bug Tracker = https://github.com/adithya7/lambre/issues
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
keywords =
    multilingual
    text-generation
    evaluation

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    stanza==1.3.0
    pyconll
    ipymarkup
    scipy

[options.packages.find]
where = src

[options.package_data]
* = html_templates/*, relation_map, rule_links

[options.entry_points]
console_scripts = 
    lambre = lambre.metric:main
    lambre-download = lambre.download:main